# drone_repositioning

./: .gitignore  CMakeLists.txt  README.md  plot_results.py  receive_msg.py  rstp_stream.py
groundTruths/: MotionLog_20260205_164029.csv  MotionLog_20260206_162525.csv  MotionLog_20260206_164040.csv  MotionLog_20260206_173901.csv  MotionLog_20260207_170034.csv  MotionLog_20260207_192421.csv  MotionLog_20260207_195431.csv  MotionLog_20260207_214048.csv  MotionLog_20260207_221554.csv  MotionLog_20260207_224301.csv  MotionLog_20260207_225019.csv  MotionLog_20260207_230740.csv  MotionLog_20260207_235433.csv  MotionLog_GT_20260207_230740.csv  MotionLog_GT_20260207_231758.csv  MotionLog_GT_20260208_170315.csv
include/: AlgoLogger.hpp  ImageMatcher.h  MetadataClient.h  RtspReader.h  StopDetector.hpp  Utils.h  Utils.hpp
logs_cmd/: AlgoLog_001_020.csv  AlgoLog_004_001.csv  AlgoLog_004_002.csv  AlgoLog_004_003.csv  AlgoLog_005_001.csv
src/: ImageMatcher.cpp  MetadataClient.cpp  RstpReader.cpp  Utils.cpp  flagctl.py  launchRepositioning.py  main.cpp  receive_msg.py
